# StenoBee

./: .gitignore  0-clean.py  1-rank.py  1_rawtolist.py  1_rawtolist_common.py  2-filter.py  2_convert_common.py  2_convertlist.py  3_rawtolist_proper.py  4-convert.py  MANIFEST.in  README.md  StenoBee-Common.json  StenoBee-Core.json  StenoBee-Numbers.py  StenoBee-Pokemon.json  StenoBee-User.json  StenoBee-elements.json  StenoBee-molecules.json  __init__.py  alt_raw.txt  append.txt  cleaned_raw.txt  cleaned_user_raw_common.txt  extras_common.txt  list.txt  list_proper.txt  overflow.txt  phrases.txt  phrases_common.txt  ranked_phrases.txt  raw.txt  raw_common.txt  setup.cfg  stenobee-numbers.py  stenobee.json  stenobee.py  user_list_common.txt  user_list_proper.txt  user_raw_common.txt  (+1 more)
.github/workflows/: release.yml
stenobee/: __init__.py  metas.py
stenobee/assets/: 1_rawtolist_common.py  1_rawtolist_proper.py  2_convert_common.py  2_convert_proper.py  Generate_Common.py  StenoBee-Alt_Ergo_Numbers.json  StenoBee-Chemistry.json  StenoBee-Common.json  StenoBee-Core.json  StenoBee-Emoji.json  StenoBee-Emojis.json  StenoBee-EndCap.json  StenoBee-Ergo_Numbers.json  StenoBee-Minecraft.json  StenoBee-Minerals.json  StenoBee-ModeSetSpace.json  StenoBee-Modifiers.json  StenoBee-Numbers.py  StenoBee-Plurals.py  StenoBee-Pokemon.json  StenoBee-Proper-Nouns.json  StenoBee-Symbols&Spelling.json  StenoBee-molecules.json  StenoBeeNiche-Chemistry-[MSHTCR].json  StenoBeeNiche-Mathematics-[MSHTC].json  StenoBeeNiche-Mineral-[MLNR].json  StenoBeeNiche-ModeSetSpace-[PMSTCD].json  (+8 more)
(+2 files in other folders)
