[metadata]
name = plover-stenobee
version = 0.3.21.13
description = Plover plugin for StenoBee Credits ( Emily Paulfioravanti Kaoffie Jen and many others )
long_description = file:README.md
long_description_content_type = text/markdown
author = Emily Easteal
author_email = emily@easteal.dev
url = https://github.com/Tink-Bell/StenoBee
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
include_package_data = True
zip_safe = True
install_requires =
  plover
  inflect
  plover-python-dictionary
packages =
  stenobee

[options.entry_points]
plover.system =
 plover_stenobee = stenobee
plover.meta =
  pluralize = stenobee.metas:pluralize
